--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,18 @@ body {
   background-color: #1f2235;
   font-family: Outfit;
   font-weight: 400;
-  text-underline-position: from-font;
-  -webkit-text-decoration-skip-ink: none;
-          text-decoration-skip-ink: none;
+  color: white;
+}
+
+.section {
+  max-width: 1350px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .header__wrapper {
   max-width: 1350px;
+  margin: 0 auto;
   padding: 22px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,7 +95,7 @@ body {
   color: #fe461c;
 }
 
-.header__button {
+.header .button {
   border: 2px #fe461c solid;
   border-radius: 4px;
   padding: 17px 15px;
@@ -105,7 +110,178 @@ body {
   transition: background-color 300ms ease, border-color 300ms ease;
 }
 
-.header__button:hover {
+.header .button:hover {
   background-color: transparent;
   border-color: #fff;
+}
+
+.hero {
+  position: relative;
+  background-image: url("../../images/hero/background-img.png");
+  background-size: 783px 634px;
+  background-position: calc( 100% - clamp( 15px, calc(202px - (1920px - 100vw) / 2), calc(202px + (100vw - 1920px) / 2) )) calc(100% - 24px);
+  background-repeat: no-repeat;
+}
+
+.hero .social-list {
+  position: absolute;
+  left: clamp(15px, calc(47px - (1920px - 100vw) / 2), calc(47px + (100vw - 1920px) / 2));
+  top: 353px;
+}
+
+.hero .social-list__item {
+  width: 50px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: #24263b;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero .social-list__item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.hero .social-list__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero .social-list__icon:nth-child(1) {
+  width: 22px;
+  height: 23px;
+}
+
+.hero .social-list__icon:nth-child(2) {
+  width: 20px;
+  height: 15px;
+}
+
+.hero .social-list__icon:nth-child(3) {
+  width: 20px;
+  height: 15px;
+}
+
+.hero__wrapper {
+  padding-top: 241px;
+  padding-bottom: 225px;
+}
+
+.hero__main-content {
+  position: relative;
+}
+
+.hero__main-content:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-image: url(../../images/hero/ellipse.png);
+  width: 204px;
+  height: 204px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.hero__text {
+  margin-bottom: 16px;
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 900;
+  line-height: 1.25;
+  letter-spacing: 0.15em;
+  text-align: left;
+}
+
+.hero__title {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 1.125;
+  text-align: left;
+  margin-bottom: 31px;
+}
+
+.hero__title span {
+  color: #fe461c;
+}
+
+.hero__desc {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.875;
+  text-align: left;
+  margin-bottom: 36px;
+}
+
+.hero__buttons-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 23px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.hero__buttons-wrapper .button.main {
+  border: 2px #fe461c solid;
+  border-radius: 4px;
+  padding: 18px 47px;
+  background-color: #fe461c;
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.9375;
+  text-align: center;
+  color: white;
+  -webkit-transition: background-color 300ms ease, border-color 300ms ease;
+  transition: background-color 300ms ease, border-color 300ms ease;
+}
+
+.hero__buttons-wrapper .button.main:hover {
+  background-color: transparent;
+  border-color: #fff;
+}
+
+.hero__buttons-wrapper .button.second {
+  border: 2px #fe461c solid;
+  border-radius: 4px;
+  padding: 18px 18px;
+  background-color: #fe461c;
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.9375;
+  text-align: center;
+  color: white;
+  -webkit-transition: background-color 300ms ease, border-color 300ms ease;
+  transition: background-color 300ms ease, border-color 300ms ease;
+  background-color: transparent;
+  border-color: #fff;
+}
+
+.hero__buttons-wrapper .button.second:hover {
+  background-color: #fe461c;
+  border-color: #fe461c;
 }
