--- a/#source/scss/_base.scss
+++ b/#source/scss/_base.scss
@@ -4,9 +4,25 @@ body {
   font-weight: 400;
   color: $color-main-text-content;
 }
-
 .section {
   max-width: 1350px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 120px 15px;
+}
+.paragraph {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: (12px / 16px);
+  letter-spacing: 0.15em;
+  text-align: center;
+  box-shadow: 0px 0px 24px 0px rgba(15, 16, 24, 0.42);
+  background-color: $color-bg-light;
+  padding: 12px 14px;
+}
+.title {
+  font-size: 36px;
+  font-weight: 600;
+  line-height: (48px / 36px);
+  text-align: left;
 }
