--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,27 @@ body {
 .section {
   max-width: 1350px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 120px 15px;
+}
+
+.paragraph {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 0.75;
+  letter-spacing: 0.15em;
+  text-align: center;
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(15, 16, 24, 0.42);
+          box-shadow: 0px 0px 24px 0px rgba(15, 16, 24, 0.42);
+  background-color: #24263b;
+  padding: 12px 14px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1.3333333333;
+  text-align: left;
 }
 
 .header__wrapper {
@@ -96,6 +116,7 @@ body {
 }
 
 .header .button {
+  display: inline-block;
   border: 2px #fe461c solid;
   border-radius: 4px;
   padding: 17px 15px;
@@ -245,6 +266,7 @@ body {
 }
 
 .hero__buttons-wrapper .button.main {
+  display: inline-block;
   border: 2px #fe461c solid;
   border-radius: 4px;
   padding: 18px 47px;
@@ -265,6 +287,7 @@ body {
 }
 
 .hero__buttons-wrapper .button.second {
+  display: inline-block;
   border: 2px #fe461c solid;
   border-radius: 4px;
   padding: 18px 18px;
@@ -284,4 +307,152 @@ body {
 .hero__buttons-wrapper .button.second:hover {
   background-color: #fe461c;
   border-color: #fe461c;
+}
+
+.about__wrapper {
+  padding-top: 160px;
+  padding-bottom: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.about__img-thumb {
+  padding-top: 107px;
+  max-width: 600px;
+}
+
+.about__img-thumb img {
+  width: 100%;
+}
+
+.about__main-content {
+  margin-left: auto;
+  margin-right: clamp(15px, calc(122px - (1320px - 100vw) / 2), 122px);
+  max-width: 536px;
+}
+
+.about__main-content .button.main {
+  display: inline-block;
+  border: 2px #fe461c solid;
+  border-radius: 4px;
+  padding: 20px 19px;
+  background-color: #fe461c;
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.9375;
+  text-align: center;
+  color: white;
+  -webkit-transition: background-color 300ms ease, border-color 300ms ease;
+  transition: background-color 300ms ease, border-color 300ms ease;
+}
+
+.about__main-content .button.main:hover {
+  background-color: transparent;
+  border-color: #fff;
+}
+
+.about__paragraph {
+  margin-bottom: 19px;
+}
+
+.about__title {
+  margin-bottom: 15px;
+}
+
+.about__desc {
+  max-width: 524px;
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.625;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.about .personal-advantage-list {
+  margin-bottom: 38px;
+  width: 534px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 54px 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 26px 1fr 26px 1fr 26px 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-auto-flow: column;
+  gap: 26px 54px;
+}
+
+.about .personal-advantage-list > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.about .personal-advantage-list > *:nth-child(2) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+.about .personal-advantage-list > *:nth-child(3) {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+}
+
+.about .personal-advantage-list > *:nth-child(4) {
+  -ms-grid-row: 7;
+  -ms-grid-column: 1;
+}
+
+.about .personal-advantage-list > *:nth-child(5) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.about .personal-advantage-list > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+
+.about .personal-advantage-list > *:nth-child(7) {
+  -ms-grid-row: 5;
+  -ms-grid-column: 3;
+}
+
+.about .personal-advantage-list > *:nth-child(8) {
+  -ms-grid-row: 7;
+  -ms-grid-column: 3;
+}
+
+.about .personal-advantage-list__text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  text-align: left;
+}
+
+.about .personal-advantage-list__text span {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.625;
+  text-align: left;
+}
+
+.about .personal-advantage-list__text span:before {
+  content: ":";
+  margin: 0 7px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  text-align: left;
 }
