--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ body {
   transition: color 300ms ease;
 }
 
-.header .navigation-list__item:hover a {
+.header .navigation-list__item:hover a,
+.header .navigation-list__item:focus a {
   color: #fe461c;
 }
 
@@ -309,6 +310,10 @@ body {
   border-color: #fe461c;
 }
 
+.about {
+  background-color: #24263b;
+}
+
 .about__wrapper {
   padding-top: 160px;
   padding-bottom: 33px;
@@ -454,5 +459,188 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.625;
+  text-align: left;
+}
+
+.portfolio__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.portfolio__paragraph {
+  margin-bottom: 17px;
+}
+
+.portfolio__title {
+  margin-bottom: 54px;
+}
+
+.portfolio .works-wrapper {
+  width: 100%;
+}
+
+.portfolio .works-wrapper-type {
+  margin-bottom: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 47px;
+}
+
+.portfolio .works-wrapper-type__item {
+  padding: 5px 0;
+  -webkit-transition: color 300ms ease;
+  transition: color 300ms ease;
+  cursor: pointer;
+}
+
+.portfolio .works-wrapper-type__item:hover, .portfolio .works-wrapper-type__item:focus {
+  color: #fe461c;
+}
+
+.portfolio .works-wrapper-type__name {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.21875;
+  text-align: left;
+}
+
+.portfolio .work-wrapper-example {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 24px 1fr 24px 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: 260px 24px 260px 24px 260px;
+  grid-template-rows: repeat(3, 260px);
+  gap: 24px;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(4) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 5;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(7) {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(8) {
+  -ms-grid-row: 5;
+  -ms-grid-column: 3;
+}
+
+.portfolio .work-wrapper-example > *:nth-child(9) {
+  -ms-grid-row: 5;
+  -ms-grid-column: 5;
+}
+
+.portfolio .work-wrapper-example__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 28px;
+  background-color: #d9d9d9;
+  border-radius: 8px;
+}
+
+.portfolio .work-wrapper-example__item:nth-child(2) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+.portfolio .work-wrapper-example__item:nth-child(4) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / 5;
+}
+
+.portfolio .work-wrapper-example__item:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  grid-row: 3 / 5;
+}
+
+.portfolio .work-wrapper-example__item:nth-child(6) {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / 5;
+}
+
+.portfolio .work-wrapper-example__name {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.25;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.portfolio .work-wrapper-example__desc {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 0.9375;
   text-align: left;
 }
