--- a/css/style.css
+++ b/css/style.css
@@ -767,3 +767,151 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+.resume__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 76px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding-bottom: 36px;
+}
+
+.resume__main-content {
+  width: 606px;
+}
+
+.resume__paragraph {
+  margin-bottom: 16px;
+}
+
+.resume__title {
+  margin-bottom: 47px;
+}
+
+.resume .experience-list-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.resume .experience-list-name__button {
+  display: inline-block;
+  border: 2px #fe461c solid;
+  border-radius: 4px;
+  padding: 10px 20px;
+  background-color: #fe461c;
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.9375;
+  text-align: center;
+  color: white;
+  -webkit-transition: background-color 300ms ease, border-color 300ms ease;
+  transition: background-color 300ms ease, border-color 300ms ease;
+  background-color: transparent;
+  border-color: #fff;
+  border-color: transparent;
+  background-color: #24263b;
+}
+
+.resume .experience-list-name__button:hover {
+  background-color: #fe461c;
+  border-color: #fe461c;
+}
+
+.resume .experience-list-stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 43px;
+}
+
+.resume .experience-list-stats__item {
+  position: relative;
+  width: 100%;
+}
+
+.resume .experience-list-stats__item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  background-color: #fe461c;
+  height: 18px;
+  border-radius: 300px;
+}
+
+.resume .experience-list-stats__item:nth-child(1):before {
+  width: 90%;
+}
+
+.resume .experience-list-stats__item:nth-child(2):before {
+  width: 80%;
+}
+
+.resume .experience-list-stats__item:nth-child(3):before {
+  width: 70%;
+}
+
+.resume .experience-list-stats__item:nth-child(4):before {
+  width: 60%;
+}
+
+.resume .experience-list-stats__item:after {
+  content: "";
+  margin-top: 15px;
+  display: block;
+  background-color: white;
+  width: 100%;
+  height: 18px;
+  border-radius: 300px;
+}
+
+.resume .experience-list-stats__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.25;
+  text-align: left;
+}
+
+.resume .experience-list-stats__name span {
+  margin-left: auto;
+}
+
+.resume__img-thumb {
+  margin-top: 155px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  max-width: 572px;
+  max-height: 504px;
+}
+
+.resume__img {
+  width: 100%;
+  height: 100%;
+}
