--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ body {
   font-weight: 700;
   line-height: 0.9375;
   text-align: center;
+  white-space: nowrap;
   color: white;
   -webkit-transition: background-color 300ms ease, border-color 300ms ease;
   transition: background-color 300ms ease, border-color 300ms ease;
@@ -277,6 +278,7 @@ body {
   font-weight: 700;
   line-height: 0.9375;
   text-align: center;
+  white-space: nowrap;
   color: white;
   -webkit-transition: background-color 300ms ease, border-color 300ms ease;
   transition: background-color 300ms ease, border-color 300ms ease;
@@ -298,6 +300,7 @@ body {
   font-weight: 700;
   line-height: 0.9375;
   text-align: center;
+  white-space: nowrap;
   color: white;
   -webkit-transition: background-color 300ms ease, border-color 300ms ease;
   transition: background-color 300ms ease, border-color 300ms ease;
@@ -357,6 +360,7 @@ body {
   font-weight: 700;
   line-height: 0.9375;
   text-align: center;
+  white-space: nowrap;
   color: white;
   -webkit-transition: background-color 300ms ease, border-color 300ms ease;
   transition: background-color 300ms ease, border-color 300ms ease;
@@ -819,6 +823,7 @@ body {
   font-weight: 700;
   line-height: 0.9375;
   text-align: center;
+  white-space: nowrap;
   color: white;
   -webkit-transition: background-color 300ms ease, border-color 300ms ease;
   transition: background-color 300ms ease, border-color 300ms ease;
@@ -914,4 +919,104 @@ body {
 .resume__img {
   width: 100%;
   height: 100%;
+}
+
+.meaning {
+  background-color: #24263b;
+}
+
+.meaning__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.meaning__paragraph {
+  margin-bottom: 24px;
+}
+
+.meaning__title {
+  margin-bottom: 50px;
+}
+
+.meaning .meaning-list {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 424px);
+  gap: 24px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.meaning .meaning-list__content-wrapper {
+  position: relative;
+  padding: 40px 45px 30px 42px;
+  background-color: #1f2235;
+}
+
+.meaning .meaning-list__content-wrapper:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  content: url("../../images/testimonial/triangle-icon.png");
+  width: 100px;
+  height: 100px;
+}
+
+.meaning .meaning-list__name {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 0.9166666667;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.meaning .meaning-list__icon {
+  position: absolute;
+  right: 97px;
+  top: 37px;
+}
+
+.meaning .meaning-list__role {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  text-align: left;
+  padding-bottom: 14px;
+  margin-bottom: 15px;
+  width: 290px;
+  border-bottom: 1px solid white;
+}
+
+.meaning .meaning-list__text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.625;
+  text-align: left;
+  width: 337px;
+}
+
+.meaning .meaning-list__img-thumb {
+  margin-top: 42px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  border: 2px solid #fe461c;
 }
