Added subscribe section with tablet responsive

--- a/#source/scss/_base.scss
+++ b/#source/scss/_base.scss
@@ -26,3 +26,13 @@ body {
   line-height: (48px / 36px);
   text-align: left;
 }
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
