--- a/#source/scss/_subscribe.scss
+++ b/#source/scss/_subscribe.scss
@@ -42,6 +42,14 @@
       background-color: $color-main-text-content;
       border: none;
       border-radius: 80px;
+      &::placeholder {
+        font-family: Lato;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: (19.2px / 16px);
+        text-align: left;
+        color: rgba(157, 161, 180, 1);
+      }
     }
     button {
       position: absolute;
