--- a/css/style.css
+++ b/css/style.css
@@ -1226,6 +1226,51 @@ body {
   border-radius: 80px;
 }
 
+.subscribe__form input::-webkit-input-placeholder {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: left;
+  color: #9da1b4;
+}
+
+.subscribe__form input::-moz-placeholder {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: left;
+  color: #9da1b4;
+}
+
+.subscribe__form input:-ms-input-placeholder {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: left;
+  color: #9da1b4;
+}
+
+.subscribe__form input::-ms-input-placeholder {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: left;
+  color: #9da1b4;
+}
+
+.subscribe__form input::placeholder {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: left;
+  color: #9da1b4;
+}
+
 .subscribe__form button {
   position: absolute;
   right: 0;
@@ -1258,4 +1303,288 @@ body {
 .subscribe__form button:hover {
   color: #fe461c;
   border-color: #fe461c;
+}
+
+.contact__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact__paragraph {
+  margin-bottom: 19px;
+}
+
+.contact__title {
+  margin-bottom: 46px;
+}
+
+.contact__content-wrapper {
+  width: 100%;
+}
+
+.contact__main-content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 100px;
+  width: 100%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 80px;
+}
+
+.contact__map-img {
+  width: 100%;
+  height: auto;
+}
+
+.contacts-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+
+.contacts-list__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 19px;
+  width: 369px;
+  padding: 18px 25px 17px 30px;
+  background-color: #24263b;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.contacts-list__icon-thumb {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(15, 16, 24, 0.42);
+          box-shadow: 0px 0px 24px 0px rgba(15, 16, 24, 0.42);
+}
+
+.contacts-list__title {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.25;
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.contacts-list__text {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  text-align: left;
+  text-shadow: 0px 0px 24px 0px rgba(179, 181, 191, 0.42);
+}
+
+.contact-form {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.contact-form__title {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.25;
+  text-align: left;
+  margin-bottom: 28px;
+}
+
+.contact-form__main-inputs {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+  margin-bottom: 18px;
+}
+
+.contact-form__main-inputs input {
+  color: white;
+  width: 100%;
+  padding: 17px 29px;
+  background-color: #24263b;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.contact-form__main-inputs input::-webkit-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form__main-inputs input::-moz-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form__main-inputs input:-ms-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form__main-inputs input::-ms-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form__main-inputs input::placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form textarea {
+  resize: none;
+  min-height: 210px;
+  width: 100%;
+  margin-bottom: 40px;
+  padding: 15px 29px;
+  color: white;
+  background-color: #24263b;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.contact-form textarea::-webkit-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form textarea::-moz-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form textarea:-ms-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form textarea::-ms-input-placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form textarea::placeholder {
+  font-family: Public Sans;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.175;
+  text-align: left;
+  color: #70717b;
+}
+
+.contact-form__button {
+  display: inline-block;
+  border: 2px #fe461c solid;
+  border-radius: 4px;
+  padding: 21px 50px;
+  background-color: #fe461c;
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 0.9375;
+  text-align: center;
+  white-space: nowrap;
+  color: white;
+  -webkit-transition: background-color 300ms ease, border-color 300ms ease;
+  transition: background-color 300ms ease, border-color 300ms ease;
+}
+
+.contact-form__button:hover {
+  background-color: transparent;
+  border-color: #fff;
 }
