--- a/css/style.css
+++ b/css/style.css
@@ -1588,3 +1588,19 @@ body {
   background-color: transparent;
   border-color: #fff;
 }
+
+.footer {
+  background-color: #24263b;
+}
+
+.footer__wrapper {
+  padding: 35px 15px;
+}
+
+.footer__text {
+  font-family: Outfit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.26;
+  text-align: center;
+}
