--- a/#source/scss/_about.scss
+++ b/#source/scss/_about.scss
@@ -5,6 +5,10 @@
     padding-bottom: 33px;
     @include content-centered;
     align-items: flex-start;
+    @media (max-width: 1024px) {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
   &__img-thumb {
     padding-top: 107px;
@@ -17,6 +21,9 @@
     margin-left: auto;
     margin-right: clamp(15px, calc(122px - (1320px - 100vw) / 2), 122px);
     max-width: 536px;
+    @media (max-width: 1024px) {
+      margin-left: 0;
+    }
     .button.main {
       @include button(20px, 19px, false);
     }
@@ -44,6 +51,11 @@
     grid-template-rows: repeat(4, 1fr);
     grid-auto-flow: column;
     gap: 26px 54px;
+    @media (max-width: 600px) {
+      width: auto;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(8, 1fr);
+    }
     &__text {
       font-size: 16px;
       font-weight: 500;
