--- a/#source/scss/_posts.scss
+++ b/#source/scss/_posts.scss
@@ -16,6 +16,9 @@
     justify-content: center;
     column-gap: 24px;
     row-gap: 34px;
+    @media (max-width: 498px) {
+      grid-template-columns: 1fr;
+    }
     &__img-thumb {
       width: 100%;
       height: 315px;
@@ -69,6 +72,9 @@
       line-height: (24px / 16px);
       text-align: left;
       width: 360px;
+      @media (max-width: 498px) {
+        width: 100%;
+      }
     }
   }
 }
