--- a/#source/scss/_resume.scss
+++ b/#source/scss/_resume.scss
@@ -5,9 +5,16 @@
     justify-content: flex-start;
     align-items: flex-start;
     padding-bottom: 36px;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
   &__main-content {
     width: 606px;
+    @media (max-width: 1024px) {
+      width: 100%;
+    }
   }
   &__paragraph {
     margin-bottom: 16px;
@@ -18,6 +25,7 @@
 
   .experience-list-name {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 40px;
     &__button {
@@ -84,6 +92,10 @@
     align-self: flex-start;
     max-width: 572px;
     max-height: 504px;
+    @media (max-width: 1024px) {
+      margin-top: 0;
+      align-self: center;
+    }
   }
   &__img {
     width: 100%;
