--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,17 @@ body {
           justify-content: flex-end;
 }
 
+.header .burger {
+  margin-right: auto;
+  display: none;
+}
+
+@media (max-width: 852px) {
+  .header .burger {
+    display: block;
+  }
+}
+
 .header .navigation-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,6 +117,12 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 27px;
+}
+
+@media (max-width: 852px) {
+  .header .navigation-list {
+    display: none;
+  }
 }
 
 .header .navigation-list__item {
@@ -161,6 +178,18 @@ body {
   position: absolute;
   left: clamp(15px, calc(47px - (1920px - 100vw) / 2), calc(47px + (100vw - 1920px) / 2));
   top: 353px;
+}
+
+@media (max-width: 1560px) {
+  .hero .social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 15px;
+    top: 100%;
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
 }
 
 .hero .social-list__item {
@@ -249,6 +278,13 @@ body {
   margin-bottom: 31px;
 }
 
+@media (max-width: 768px) {
+  .hero__title {
+    font-size: 46px;
+    line-height: 1.1304347826;
+  }
+}
+
 .hero__title span {
   color: #fe461c;
 }
@@ -324,6 +360,21 @@ body {
   border-color: #fe461c;
 }
 
+@media (max-width: 450px) {
+  .hero__buttons-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .hero__buttons-wrapper .button.second {
+    width: 153px;
+  }
+}
+
 .about {
   background-color: #24263b;
 }
@@ -345,6 +396,18 @@ body {
           align-items: flex-start;
 }
 
+@media (max-width: 1024px) {
+  .about__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .about__img-thumb {
   padding-top: 107px;
   max-width: 600px;
@@ -358,6 +421,12 @@ body {
   margin-left: auto;
   margin-right: clamp(15px, calc(122px - (1320px - 100vw) / 2), 122px);
   max-width: 536px;
+}
+
+@media (max-width: 1024px) {
+  .about__main-content {
+    margin-left: 0;
+  }
 }
 
 .about__main-content .button.main {
@@ -453,6 +522,48 @@ body {
   -ms-grid-column: 3;
 }
 
+@media (max-width: 600px) {
+  .about .personal-advantage-list {
+    width: auto;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: (1fr)[8];
+    grid-template-rows: repeat(8, 1fr);
+  }
+  .about .personal-advantage-list > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(4) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(6) {
+    -ms-grid-row: 6;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(7) {
+    -ms-grid-row: 7;
+    -ms-grid-column: 1;
+  }
+  .about .personal-advantage-list > *:nth-child(8) {
+    -ms-grid-row: 8;
+    -ms-grid-column: 1;
+  }
+}
+
 .about .personal-advantage-list__text {
   font-size: 16px;
   font-weight: 500;
@@ -516,6 +627,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 47px;
 }
 
@@ -592,6 +705,74 @@ body {
 .portfolio .work-wrapper-example > *:nth-child(9) {
   -ms-grid-row: 5;
   -ms-grid-column: 5;
+}
+
+@media (max-width: 768px) {
+  .portfolio .work-wrapper-example {
+    -ms-grid-columns: 1fr 15px 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: 260px 15px 260px 15px 260px;
+    grid-template-rows: repeat(3, 260px);
+    gap: 15px;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(4) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(6) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 3;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item {
+    height: auto;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item:nth-child(2) {
+    grid-column: auto;
+    grid-row: auto;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item:nth-child(4) {
+    grid-column: auto;
+    grid-row: auto;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item:nth-child(5) {
+    grid-row: auto;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item:nth-child(6) {
+    grid-column: auto;
+    grid-row: auto;
+  }
+}
+
+@media (max-width: 468px) {
+  .portfolio .work-wrapper-example {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+  }
+  .portfolio .work-wrapper-example > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .portfolio .work-wrapper-example .work-wrapper-example__item {
+    height: 260px;
+  }
 }
 
 .portfolio .work-wrapper-example__item {
@@ -699,6 +880,12 @@ body {
           justify-content: center;
 }
 
+@media (max-width: 468px) {
+  .advantages .advantages-list {
+    grid-template-columns: repeat(auto-fit, 257px);
+  }
+}
+
 .advantages .advantages-list__item {
   padding: 41px 39px 41px 25px;
   background-color: #1f2235;
@@ -803,8 +990,26 @@ body {
   padding-bottom: 36px;
 }
 
+@media (max-width: 1024px) {
+  .resume__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .resume__main-content {
   width: 606px;
+}
+
+@media (max-width: 1024px) {
+  .resume__main-content {
+    width: 100%;
+  }
 }
 
 .resume__paragraph {
@@ -819,6 +1024,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 40px;
 }
@@ -927,6 +1134,15 @@ body {
   max-height: 504px;
 }
 
+@media (max-width: 1024px) {
+  .resume__img-thumb {
+    margin-top: 0;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
 .resume__img {
   width: 100%;
   height: 100%;
@@ -971,6 +1187,19 @@ body {
           justify-content: center;
 }
 
+@media (max-width: 498px) {
+  .meaning .meaning-list {
+    grid-template-columns: repeat(auto-fit, 400px);
+  }
+}
+
+@media (max-width: 468px) {
+  .meaning .meaning-list {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+
 .meaning .meaning-list__content-wrapper {
   position: relative;
   padding: 40px 45px 30px 42px;
@@ -1002,6 +1231,13 @@ body {
   top: 37px;
 }
 
+@media (max-width: 498px) {
+  .meaning .meaning-list__icon {
+    right: 25px;
+    top: 25px;
+  }
+}
+
 .meaning .meaning-list__role {
   font-family: Public Sans;
   font-size: 16px;
@@ -1014,6 +1250,12 @@ body {
   border-bottom: 1px solid white;
 }
 
+@media (max-width: 498px) {
+  .meaning .meaning-list__role {
+    width: 100%;
+  }
+}
+
 .meaning .meaning-list__text {
   font-family: Roboto;
   font-size: 16px;
@@ -1021,6 +1263,12 @@ body {
   line-height: 1.625;
   text-align: left;
   width: 337px;
+}
+
+@media (max-width: 498px) {
+  .meaning .meaning-list__text {
+    width: 100%;
+  }
 }
 
 .meaning .meaning-list__img-thumb {
@@ -1068,6 +1316,13 @@ body {
      -moz-column-gap: 24px;
           column-gap: 24px;
   row-gap: 34px;
+}
+
+@media (max-width: 498px) {
+  .posts .posts-list {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 .posts .posts-list__img-thumb {
@@ -1152,6 +1407,12 @@ body {
   width: 360px;
 }
 
+@media (max-width: 498px) {
+  .posts .posts-list__text {
+    width: 100%;
+  }
+}
+
 .subscribe {
   background-color: #24263b;
   padding: 120px 15px;
@@ -1173,6 +1434,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 20px;
 }
 
 @media (max-width: 960px) {
@@ -1185,6 +1447,13 @@ body {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    padding: 100px 30px;
+  }
+}
+
+@media (max-width: 960px) {
+  .subscribe__main-content-wrapper {
+    width: 100%;
   }
 }
 
@@ -1198,12 +1467,42 @@ body {
   width: 433px;
 }
 
+@media (max-width: 960px) {
+  .subscribe__paragraph {
+    width: 100%;
+  }
+}
+
 .subscribe__text {
   font-size: 55px;
   font-weight: 700;
   line-height: 1;
   text-align: left;
   margin-bottom: 12px;
+}
+
+@media (max-width: 960px) {
+  .subscribe__text {
+    width: 100%;
+    font-size: 45px;
+    line-height: 1;
+  }
+}
+
+@media (max-width: 534px) {
+  .subscribe__text {
+    font-size: 35px;
+    line-height: 1;
+  }
+}
+
+.subscribe__desc {
+  font-family: Public Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.175;
+  text-align: left;
+  width: 100%;
 }
 
 .subscribe__form {
@@ -1215,6 +1514,7 @@ body {
 @media (max-width: 960px) {
   .subscribe__form {
     width: 100%;
+    min-width: auto;
   }
 }
 
@@ -1305,6 +1605,13 @@ body {
   border-color: #fe461c;
 }
 
+@media (max-width: 534px) {
+  .subscribe__form button {
+    margin-top: 20px;
+    position: static;
+  }
+}
+
 .contact__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1351,6 +1658,16 @@ body {
   margin-bottom: 80px;
 }
 
+@media (max-width: 1024px) {
+  .contact__main-content-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 40px;
+  }
+}
+
 .contact__map-img {
   width: 100%;
   height: auto;
@@ -1373,6 +1690,16 @@ body {
   gap: 20px;
 }
 
+@media (max-width: 1024px) {
+  .contacts-list {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    gap: 35px;
+  }
+}
+
 .contacts-list__card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1389,6 +1716,15 @@ body {
   background-color: #24263b;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 8px;
+}
+
+@media (max-width: 1024px) {
+  .contacts-list__card {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .contacts-list__icon-thumb {
@@ -1424,13 +1760,19 @@ body {
   font-weight: 300;
   line-height: 1.5;
   text-align: left;
-  text-shadow: 0px 0px 24px 0px rgba(179, 181, 191, 0.42);
+  word-break: break-word;
 }
 
 .contact-form {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+@media (max-width: 1024px) {
+  .contact-form {
+    width: 100%;
+  }
 }
 
 .contact-form__title {
@@ -1454,6 +1796,16 @@ body {
           justify-content: center;
   gap: 30px;
   margin-bottom: 18px;
+}
+
+@media (max-width: 524px) {
+  .contact-form__main-inputs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 18px;
+  }
 }
 
 .contact-form__main-inputs input {
